update GC enum to use Shenandoah